k8s-intro/demo/manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-intro-demo
spec:
  selector:
    matchLabels:
      app: k8s-intro-demo
  template:
    metadata:
      labels:
        app: k8s-intro-demo
    spec:
      containers:
        - name: k8s-intro-demo
          image: lypemania/k8s-intro-demo:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
