k8s-intro/demo/manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-intro-demo
spec:
  selector:
    app: k8s-intro-demo
  ports:
    - port: 80
      targetPort: 80
