k8s-intro/demo/manifests/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-intro-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /demo
            backend:
              serviceName: k8s-intro-demo
              servicePort: 80
